# shadowsocks-gtk-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run-local.sh  rustfmt.toml  stay-safe.md
.github/: dependabot.yml
.github/workflows/: auto-compile.yml  tag-release.yml
example-config-profiles/A-good-profile-using-config-file/: profile.yaml
example-config-profiles/Group-of-bad-profiles/Bad-launch-params/: profile.yaml
example-config-profiles/Group-of-bad-profiles/Bad-plugin/: profile.yaml  ss.json
example-config-profiles/Group-of-bad-profiles/Bad-plugin-delay/: mock-plugin.sh  profile.yaml
example-config-profiles/Group-of-bad-profiles/No-def-file/: .ss_ignore
example-config-profiles/Group-of-good-profiles/Using-cli-args/: profile.yaml
example-profiles/Group-of-bad-profiles/Bad-config/: profile.yaml
example-profiles/Group-of-bad-profiles/Bad-plugin/: profile.yaml
example-profiles/Group-of-bad-profiles/No-config/: foo
example-profiles/Group-of-good-profiles/Config-file-mode/: profile.yaml  ss.json5
example-profiles/Group-of-good-profiles/Proxy-mode/: profile.yaml
example-profiles/Group-of-good-profiles/Tun-mode/: profile.yaml
example_config/A-good-profile/: profile.yaml  ss.json
example_config/Group-of-bad-profiles/Bad-plugin-delay/: profile.yaml
example_config/Group-of-bad-profiles/Exit-immediate/: profile.yaml
example_config_profiles/Group-of-bad-profiles/Bad-launch-params/: profile.yaml
example_config_profiles/Group-of-bad-profiles/Bad-plugin/: profile.yaml
example_config_profiles/Group-of-bad-profiles/Exit-immediate/: profile.yaml
res/: QnA.md  config-guide.md  shadowsocks-gtk-rs.desktop  stay-safe.md
src/: clap_def.rs  config_loader.rs  event.rs  gui.rs  io.rs  lib.rs  main.rs  profile_manager.rs  runtime_api.rs  tray.rs  util.rs
src/gui/: app.rs  backlog.rs  event.rs  mod.rs  notification.rs  notify.rs  popup.rs  tray.rs
src/io/: app_state.rs  app_state_manager.rs  config_loader.rs  mod.rs  runtime_api.rs
src/lib/: consts.rs  mod.rs  notify_method.rs  runtime_api.rs  runtime_api_msg.rs
src/lib/util/: hacks.rs  leaky_bucket.rs  mod.rs  output_kind.rs
src/util/: leaky_bucket.rs  mod.rs  sync.rs
