[package]
authors = [
  "spyophobia <76800505+spyophobia@users.noreply.github.com>",
]
default-run = "ssgtk"
description = "A desktop GUI frontend for shadowsocks-rust client implemented with gtk-rs."
edition = "2021"
homepage = "https://github.com/spyophobia/shadowsocks-gtk-rs"
keywords = ["shadowsocks", "gui", "linux"]
license = "GPL-3.0-or-later"
name = "shadowsocks-gtk-rs"
readme = "README.md"
repository = "https://github.com/spyophobia/shadowsocks-gtk-rs"
version = "0.2.0"

[features]
default = ["runtime_api"]
runtime_api = ["json5"]

[dependencies]
clap = "3.0.0"
gtk = "0.14.3"
# itertools = "0.10.1"
libappindicator = "0.6.1"
log = "0.4.14"
# regex = "1.5.4"
crossbeam-channel = "0.5.1"
ctrlc = {version = "3.2.1", features = ["termination"]}
enum-iterator = "0.7.0"
glib = "0.14.8"
json5 = {version = "0.4.1", optional = true}
nix = "0.23.0"
notify-rust = "4.5.5"
serde = {version = "1.0.130", features = ["derive"]}
serde_yaml = "0.8.21"
simple_logger = "1.15.0"
strum = {version = "0.23.0", features = ["derive"]}
fs2 = "0.4.3"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "ssgtk"
path = "src/bin/ssgtk/main.rs"

[[bin]]
name = "ssgtkctl"
path = "src/bin/ssgtkctl/main.rs"
required-features = ["runtime_api"]
