[package]
authors = [
  "spyophobia <76800505+spyophobia@users.noreply.github.com>",
]
default-run = "ssgtk"
description = "A desktop GUI frontend for shadowsocks-rust client implemented with gtk-rs."
edition = "2021"
homepage = "https://github.com/spyophobia/shadowsocks-gtk-rs"
keywords = ["shadowsocks", "gui", "linux"]
license = "GPL-3.0-or-later"
name = "shadowsocks-gtk-rs"
readme = "README.md"
repository = "https://github.com/spyophobia/shadowsocks-gtk-rs"
version = "0.4.0"

[features]
default = ["runtime-api"]
runtime-api = ["json5"]

[dependencies]
bus = "2.2.4"
clap = {version = "3.2.8", features = ["cargo", "derive", "unicode"]}
crossbeam-channel = "0.5.5"
ctrlc = {version = "3.2.2", features = ["termination"]}
derivative = "2.2.0"
duct = "0.13.5"
enum-iterator = "1.1.2"
fs2 = "0.4.3"
glib = "0.15.12"
gtk = "0.15.5"
ipnet = {version = "2.5.0", features = ["serde"]}
itertools = "0.10.3"
json5 = {version = "0.4.1", optional = true}
lazy_static = "1.4.0"
libappindicator = "0.7.1"
log = "0.4.17"
nix = "0.24.1"
notify-rust = "4.5.8"
serde = {version = "1.0.137", features = ["derive"]}
serde_yaml = "0.8.24"
simplelog = "0.12.0"
strum = {version = "0.24.1", features = ["derive"]}
which = "4.2.5"
xdg = "2.4.1"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "ssgtk"
path = "src/bin/ssgtk/main.rs"

[[bin]]
name = "ssgtkctl"
path = "src/bin/ssgtkctl/main.rs"
required-features = ["runtime-api"]
